Fixed spacing/margins here and there. Just need to style the webpage nicely to be able to deploy.

--- a/client/src/assets/reset.css
+++ b/client/src/assets/reset.css
@@ -3,10 +3,8 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
 }
 *:focus {
-  outline: 3px dashed #228bec;
 }
 html {
   font: 62.5% / 1.15 sans-serif;
